# docking-plp-openCL

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_w_make_run.sh  build_w_ninja_run.sh  test.sh  windows_build_w_ninja_msvc_run.bat  windows_build_w_ninja_run.bat
batches/: run.json  run.json_  run_3CS9.json  run_3NJG.json  run_3PTB.json  run_6O0K.json
input/receptor/: TARGET_PRO_1.mol2
src/: main.cpp
src/host/: Batch.cpp  Batch.hpp  CMakeLists.txt  Data.cpp  Data.hpp  WorkerCL.cpp  WorkerCL.hpp  dbgl.cpp  dbgl.hpp  io.cpp  io.hpp
src/kernels/: Equals.cl  PLP.cl  PLPConstants.cl  Quat.cl  SyncToModel.cl  clStructs.h  classification.cl  constants.cl  crossover.cl  dsyevh3.cl  grid.cl  kernelCheckConvergence.cl  kernelCreateNew.cl  kernelFinalize.cl  kernelFinishStep.cl  kernelInit.cl  kernelInit2.cl  kernelInit3.cl  kernelInitGrid.cl  kernelNormalize.cl  kernelPLP.cl  kernelSort.cl  kernelSortAndNormalize.cl  kernelSyncToModel.cl  mutate.cl  normalize.cl  randomExtra.cl  rouletteWheelSelect.cl  sortPopulation.cl  vector3.cl
test/: test.json
test/806432e/: advanced100r.sdf  advanced1r.sdf  export_3CS9_n100.sdf  export_3CS9_n150.sdf  export_3CS9_n200.sdf  export_3CS9_n25.sdf  export_3CS9_n50.sdf  export_3CS9_n75.sdf  export_3NJG_n100.sdf  export_3NJG_n150.sdf  export_3NJG_n200.sdf  export_3NJG_n25.sdf  export_3NJG_n50.sdf  export_3NJG_n75.sdf  export_3PTB_n100.sdf  export_3PTB_n150.sdf  export_3PTB_n200.sdf  export_3PTB_n25.sdf  export_3PTB_n50.sdf  export_3PTB_n75.sdf  export_6O0K_n100.sdf  export_6O0K_n150.sdf  export_6O0K_n200.sdf  simple5r.sdf  (+4 more)
(+28 files in other folders)
